# iiwa_stack_surgery

./: README.md
gazebo_ros_link_attacher/: CMakeLists.txt  README.md
gazebo_ros_link_attacher/scripts/: attach.py  detach.py
gazebo_ros_link_attacher/src/: gazebo_ros_link_attacher.cpp
iiwa_gazebo_surgery/: CMakeLists.txt  package.xml
iiwa_gazebo_surgery/launch/: basis_change_moveit.launch  head_coordinates_pub.launch  iiwa_gazebo.launch  iiwa_gazebo_with_sunrise.launch  iiwa_world.launch  planning_execution.launch  simulation_control.launch  spawn_tool.launch  surgery_moveit.launch
iiwa_gazebo_surgery/scripts/: basis_change_cartesian_pose.py  basis_change_moveit.py  planning_execution.py  send_coordinates.py  simulation_control.py  spawn_tool.py  surgery_moveit.py
iiwa_gripper_description/: CMakeLists.txt  package.xml
iiwa_gripper_description/launch/: iiwa14_gripper_upload.launch
iiwa_gripper_description/meshes/visual/: gripper_v9.stl
iiwa_gripper_description/urdf/: iiwa_gripper.urdf.xacro
iiwa_gripper_moveit/: .setup_assistant  CMakeLists.txt  package.xml
iiwa_gripper_moveit/config/: fake_controllers.yaml  iiwa14_gripper.srdf  ompl_planning.yaml
iiwa_gripper_moveit/launch/: chomp_planning_pipeline.launch.xml  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  iiwa14_gripper_moveit_controller_manager.launch.xml  iiwa_gripper_command_moveit.launch  move_group.launch  moveit_planning_execution.launch  moveit_planning_execution_surgery.launch  moveit_rviz.launch  planning_context.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml
iiwa_gripper_moveit/src/: command_robot_moveit.cpp
iiwa_surgery_description/: CMakeLists.txt  package.xml
iiwa_surgery_description/launch/: iiwa14_surgery_upload.launch
iiwa_surgery_description/urdf/: iiwa14.xacro  iiwa14_surgery.urdf.xacro
iiwa_surgery_moveit/: .setup_assistant  CMakeLists.txt  package.xml
iiwa_surgery_moveit/config/: fake_controllers.yaml  iiwa14.srdf  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
iiwa_surgery_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  iiwa14_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_planning_execution_surgery.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
operating_room/: CMakeLists.txt  package.xml
operating_room/launch/: operating_world.launch
operating_room/models/Walls/: model.config  model.sdf
operating_room/models/drill/: model.config  model.sdf
operating_room/models/gripper/: model.config  (+1 more)
operating_room/world/: operating_world.world
(+36 files in other folders)
