<?xml version="1.0"?>
<package format="2">
  <name>iiwa_gazebo_surgery</name>
  <version>1.4.0</version>
  <description>This package allows to load a KUKA LBR IIWA robot onto Gazebo for surgery applications</description>
  <author email="lincolnboer@gmail.com">Lincoln Boer</author>
  <maintainer email="lincolnboer@gmail.com">Lincoln Boer</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>iiwa_description</depend>
  <depend>iiwa_surgery_description</depend>
  <depend>gazebo_ros</depend>

</package>
